<resources>
    <string name="app_name">Notification Scheduler</string>

    <string name="job_service">Job Service</string>
    <string name="job_running">Your Job ran to completion!</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not Set</string>
</resources>
